CaseImplementation feat: Alterando responses